# AI-Portfolio

./: .gitignore  LICENSE  PYTHON_CODE_GUIDELINES.md  README.md  pyproject.toml
01_resume-chatbot-llm/: .gitignore  README.md  app.py  requirements.txt
01_resume-chatbot-llm/data/: summary.txt  todo.txt
02_image-classifier-cnn/banknotes/: requirements.txt
02_image-classifier-cnn/cnn_concepts/: quick_cnn_demo.py  test_cnn_demo.py
02_image-classifier-cnn/digits/: handwriting.py
02_image-classifier-cnn/traffic/: readme.md  requirements.txt
10_uncertainity/bayesnet/: sample.py
10_uncertainity/pagerank/: pagerank.py
12_search/tictactoe/: tictactoe.py
1_resume-chatbot-llm/: app.py  chat.py  requirements.txt
2_fake-news-detector/: README.md  USAGE_GUIDE.md  demo.py  fake_news_detector.py  models.py  services.py  test.py
3_image-classifier-cnn/banknotes/: banknotes.py
3_image-classifier-cnn/cnn_concepts/: cnn_power_demo.ipynb
3_image-classifier-cnn/digits/: handwriting.py  recognition.py  requirements.txt
3_image-classifier-cnn/image-filter/: filter.py
3_image-classifier-cnn/traffic/: GRADIO_README.md  gradio_app.py  recognition.py  traffic.py
5_ai-newsletter-generator/: app.py  demo.py  newsletter_generator.py
6_personal_finance/: README.md  category_classifier.py  requirements.txt
7_language/attention/: mask.py  requirements.txt
7_language/ngrams/: ngrams.py
7_language/parser/: parser.py
7_language/sentiment/: sentiment.py
7_language/vectors/: vectors.py
8_model_training/shopping/: shopping.py
9_optimization/scheduling/: schedule1.py
ai-newsletter-generator/: OOP_ARCHITECTURE.md  README.md  demo_newsletter_professional_5_articles.html  models.py  requirements.txt  services.py  test.py
fake-news-detector/: app.py  requirements.txt  setup_nltk.py  start_app.py  test_detection.py
hf_pipeline/: pipelines.py  tokenizers.py
hf_pipeline/code_gen/: README.md  code_gen.py  optimized  optimized.cpp  requirements.txt  test_code_gen.py
hf_pipeline/meeting_minutes/: README.md  meeting_minutes_gradio.py  meeting_minutes_product.py  meeting_minutes_simple.py  requirements.txt  run.py  test_app.py
hf_pipeline/pipelines/: DEPLOYMENT_GUIDE.md  README_spaces.md  SETUP_GUIDE.md  app.py  install_dependencies.sh  pipelines.py  requirements_spaces.txt  test_app.py
hf_pipeline/synthetic_data-gen/: README.md  requirements.txt  simple_generator.py  synthetic_data_generator.py  test_generator.py
image-classifier-cnn/banknotes/: banknotes.py
image-classifier-cnn/digits/: recognition.py
knowledge/knights/: logic.py  puzzle.py
knowledge/minsesweeper/: minesweeper.py
language/attention/: analysis.md
language/cfg/: cfg0.py  cfg1.py
language/markov/: generator.py
llm/: README.md  gradio_app.py  launch.py  requirements.txt  run_web_interface.py  usage_example.py  website_summary.py
llm/brochure_gen/: README.md  __init__.py  brochure_generator.py  gradio_app.py  requirements.txt
llm/frontier_models/: frontier_model.py
llm/website_summary/: __init__.py  gradio_app.py  launch.py  website_summary.py
model_training/nim/: nim.py  play.py  requirements.txt
multi_modal/: README.md  multi-modal.py  requirements.txt  tool.py
optimization/crossword/: crossword.py  generate.py
optimization/hospitals/: hospitals.py
optimization/production/: production.py
optimization/scheduling/: schedule0.py
personal_finance/: app.py  demo.py  expense_analyzer.py  models.py  test.py
resume-chatbot-llm/: README.md
search/: maze.py
search/degrees/: degrees.py  util.py
search/tictactoe/: runner.py
uncertainity/bayesnet/: inference.py  likelihood.py  model.py
uncertainity/chain/: model.py
(+8 files in other folders)
